# department

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: thin_box.rs
src/: alloc.rs  backing.rs  base.rs  boxed.rs  collections.rs  debug.rs  error.rs  fallback.rs  handles.rs  heap.rs  inline.rs  lib.rs  old_base.rs  rc.rs  statics.rs  string.rs  traits.rs  utils.rs
src/collections/: linked_list.rs  vec.rs
src/inline/: multi.rs  multi_elem.rs  multi_range.rs  single.rs  single_elem.rs  single_range.rs
src/statics/: cell.rs  multi.rs  multi_elem.rs  multi_range.rs  single.rs  single_elem.rs  single_range.rs  static_heap.rs  traits.rs
