[package]
name = "department"
version = "0.1.2"
edition = "2018"
description = "Implementation of the proposed Storages API"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "collection", "nightly", "storage", "no_std"]
categories = ["no-std"]
repository = "https://github.com/CraftSpider/department"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "mutex"] }
