[package]
name = "department"
version = "0.2.0"
edition = "2021"
description = "Implementation of the proposed Storages API"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "collection", "nightly", "storage", "no_std"]
categories = ["no-std"]
repository = "https://github.com/CraftSpider/department"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "coerce-unsized", "all_storages", "all_collections"]

# Optional std support
std = []

# Optional automatic unsizing support
coerce-unsized = []

# Different storage implementations, which may have their own requirements
all_storages = ["inline", "static", "alloc", "fallback"]
inline = []
static = []
alloc = []
fallback = []

# Different collection implementations
all_collections = ["box", "vec", "string"]
box = []
vec = []
string = ["vec"]

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "mutex"] }
