[package]
name = "department"
version = "0.2.5"
edition = "2021"
description = "Implementation of the proposed Storages API"
license = "MIT OR Apache-2.0"
keywords = ["allocator", "collection", "nightly", "storage", "no_std"]
categories = ["no-std"]
repository = "https://github.com/CraftSpider/department"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "unsize", "all_storages", "all_collections"]

# Optional std support
std = []

# Optional unsizing support, both manual and automatic. Using unsized types without this feature may be more painful
# than necessary!
unsize = []

# Different storage implementations, which may have their own requirements
all_storages = ["inline", "static", "alloc", "fallback", "debug", "heap"]
inline = []
heap = []
static = []
alloc = []
fallback = []
debug = ["alloc", "vec"]

# Different collection implementations
all_collections = ["box", "rc", "vec", "linked", "string"]
box = []
rc = []
vec = []
linked = []
string = ["vec"]

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "mutex"] }

[dev-dependencies]
spin = { version = "0.9", default-features = false, features = ["rwlock"] }
